--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "@google-cloud/auth": "^9.14.1",
+    "google-auth-library": "^9.14.1",
     "@googleapis/drive": "^5.0.0",
     "@supabase/supabase-js": "^2.45.3",
     "pdf-parse": "^1.1.1",
