--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "type": "module",
   "dependencies": {
     "google-auth-library": "^9.14.1",
-    "@googleapis/drive": "^5.0.0",
+    "googleapis": "^131.0.0",
     "@supabase/supabase-js": "^2.45.3",
-    "pdf-parse": "^1.1.1",
     "crypto-js": "^4.2.0",
     "mime-types": "^2.1.35"
   }
